--- a/занятие 3/SaloonSharm/MainWindow.xaml
+++ b/занятие 3/SaloonSharm/MainWindow.xaml
@@ -15,6 +15,6 @@
             <Image Margin="5" Grid.Row="0" Source="logo.png"/>
             <TextBlock x:Name="pageName" Margin="5" VerticalAlignment="Center" Text="Главное окно" FontSize="22" FontFamily="Tahoma" />
         </StackPanel>
-        <Frame Grid.Row="1" x:Name="mainFrame"/>
+        <Frame NavigationUIVisibility="Hidden" Grid.Row="1" x:Name="mainFrame"/>
     </Grid>
 </Window>
